--- a/parameters_3d.conf.example
+++ b/parameters_3d.conf.example
@@ -4,6 +4,7 @@ ic_type = simple
 ic_grid = 128 128 128
 ic_box_lengths = 1d0 1d0 1d0 "kpc"
 ic_nlevels = 3
+ic_redshift = 1.23d0
 
 
 # **Runtime Options**
@@ -56,8 +57,12 @@ species = HII HeII HeIII
 
 # **Ionization Equilibrium**
 uvb_equilibrium = disable
+uvb_model = HM12
+
 collisional_ionization_equilibrium = enable
+
 photoionization_equilibrium = disable
+
 species_cases = case_a case_b case_a
 equilibrium_table_size = 1024 1024
 equilibrium_table_temp_range = 1d2 1d7 'K'
