--- a/src/rhyme_ionisation_equilibrium/CMakeLists.txt
+++ b/src/rhyme_ionisation_equilibrium/CMakeLists.txt
@@ -9,12 +9,15 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "-std=f2008")
 endif()
 
-set(deps rhyme_physics rhyme_chemistry rhyme_logger)
+set(deps rhyme_nombre rhyme_physics rhyme_chemistry rhyme_uv_background
+         rhyme_logger)
 
 set(internal_deps)
 
-set(srcs src/rhyme_ionisation_equilibrium_init.f90
-         src/rhyme_ionisation_equilibrium.f90)
+set(srcs
+    src/rhyme_ionisation_equilibrium_init.f90
+    src/rhyme_ionisation_equilibrium_update_table.f90
+    src/rhyme_ionisation_equilibrium.f90)
 
 set(rhyme_src_dir ..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
