wip: rt drawing -- Added a new macro NELE for the number of elements Loading elements and their abundances in chemistry module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ set(deps
     rhyme_muscl_hancock
     rhyme_chombo
     rhyme_initial_condition
+    rhyme_uv_background
     rhyme_spectrum)
 
 foreach(dep ${deps})
