--- a/src/rhyme_chemistry/src/rhyme_periodic_table/tests/CMakeLists.txt
+++ b/src/rhyme_chemistry/src/rhyme_periodic_table/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ set(factories rhyme_logger)
 
 set(test_deps rhyme_assertion)
 
-set(assertions rhyme_nombre)
+set(assertions)
 
 set(rhyme_src_dir ../../../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
