--- a/src/rhyme_param_parser/CMakeLists.txt
+++ b/src/rhyme_param_parser/CMakeLists.txt
@@ -16,6 +16,7 @@ set(deps
     rhyme_samr_bc
     rhyme_cfl
     rhyme_thermo_base
+    rhyme_uv_background
     rhyme_ionisation_equilibrium
     rhyme_drawing
     rhyme_irs
