--- a/parameters_2d.conf.example
+++ b/parameters_2d.conf.example
@@ -50,7 +50,7 @@ solver_type = cpu_intensive
 
 # **Chemistry**
 elements = H He
-element_abundances = .75d0 .25d0
+element_abundances = .75e0 .25e0
 species = HII HeII HeIII
 
 
