--- a/src/rhyme_chemistry/CMakeLists.txt
+++ b/src/rhyme_chemistry/CMakeLists.txt
@@ -13,7 +13,8 @@ set(deps rhyme_logger)
 
 set(internal_deps rhyme_periodic_table)
 
-set(srcs src/rhyme_chemistry_init.f90 src/rhyme_chemistry.f90)
+set(srcs src/rhyme_chemistry_init.f90 src/rhyme_chemistry_mu.f90
+         src/rhyme_chemistry.f90)
 
 set(rhyme_src_dir ..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
