wip: rt drawing -- converting uvb self-shielding density to code unit

--- a/src/rhyme_uv_background/tests/CMakeLists.txt
+++ b/src/rhyme_uv_background/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(rhyme_uv_background_tests)
 set(test_subject rhyme_uv_background)
 
-set(factories rhyme_logger)
+set(factories rhyme_physics rhyme_logger)
 
 set(test_deps rhyme_assertion)
 
