wip: rt drawing -- added a function to pick neutral fractions of a given denisty and temperature from ionisation equilibrium table

--- a/src/rhyme_ionisation_equilibrium/CMakeLists.txt
+++ b/src/rhyme_ionisation_equilibrium/CMakeLists.txt
@@ -17,6 +17,7 @@ set(internal_deps)
 set(srcs
     src/rhyme_ionisation_equilibrium_init.f90
     src/rhyme_ionisation_equilibrium_update_table.f90
+    src/rhyme_ionisation_equilibrium_pick.f90
     src/rhyme_ionisation_equilibrium.f90)
 
 set(rhyme_src_dir ..)
