--- a/src/rhyme_drawing/tests/CMakeLists.txt
+++ b/src/rhyme_drawing/tests/CMakeLists.txt
@@ -3,11 +3,14 @@ set(test_subject rhyme_drawing)
 
 set(factories
     rhyme_physics
+    rhyme_chemistry
     rhyme_samr
     rhyme_ideal_gas
     rhyme_hydro_base
     rhyme_initial_condition
+    rhyme_ionisation_equilibrium
     rhyme_thermo_base
+    rhyme_uv_background
     rhyme_logger)
 
 set(test_deps rhyme_assertion)
