--- a/src/rhyme_logger/CMakeLists.txt
+++ b/src/rhyme_logger/CMakeLists.txt
@@ -24,6 +24,8 @@ set(srcs
     src/rhyme_logger_logo.f90
     src/rhyme_logger_time.f90
     src/rhyme_logger_plot_image.f90
+    src/rhyme_logger_plot_histogram.f90
+    src/rhyme_logger_plot_2d_histogram.f90
     src/rhyme_logger_section.f90)
 
 set(rhyme_src_dir ..)
