feat: publishing the first report fix: unicode plot resolution fix: wrong Macros in drawing

--- a/parameters_2d.conf.example
+++ b/parameters_2d.conf.example
@@ -82,7 +82,7 @@ photoionization_equilibrium = disable
 ie_convergence_rate = 1e-2
 ie_max_niterations = 1000
 
-species_cases = case_b case_b case_b  # HII HeII HeIII
+species_cases = case_a case_b case_a  # HII HeII HeIII
 
 equilibrium_table_size = 1024 1024
 equilibrium_table_temp_range = 1d2 1d7 'K'
