fix: calc_flux -- forgotten abs fix: drawing -- compare absolution value of velocities

--- a/parameters_1d.conf.example
+++ b/parameters_1d.conf.example
@@ -55,8 +55,8 @@ n_iteration = 100
 
 
 # **Slope Limiter**
-slope_limiter = van_leer
-slope_limiter_omega = 0d0
+slope_limiter = minmod
+slope_limiter_omega = -1d0
 
 
 # **MUSCL-Hancock solver**
