wip: find_max -- new tiling format wrap tiles into a 1+NDIM dimension array

--- a/src/rhyme_tiling/CMakeLists.txt
+++ b/src/rhyme_tiling/CMakeLists.txt
@@ -13,7 +13,8 @@ set(deps rhyme_logger)
 
 set(internal_deps)
 
-set(srcs src/rhyme_tiling_init.f90 src/rhyme_tiling.f90)
+set(srcs src/rhyme_tiling_find_max.f90 src/rhyme_tiling_init.f90
+         src/rhyme_tiling.f90)
 
 set(rhyme_src_dir ..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
