feat: sanity check and cfl init

--- a/src/rhyme_cfl/CMakeLists.txt
+++ b/src/rhyme_cfl/CMakeLists.txt
@@ -9,11 +9,12 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008")
 endif()
 
-set(deps rhyme_samr rhyme_thermo_base)
+set(deps rhyme_thermo_base rhyme_samr)
 
 set(internal_deps)
 
-set(srcs src/rhyme_cfl_time_step.f90 src/rhyme_cfl.f90)
+set(srcs src/rhyme_cfl_time_step.f90 src/rhyme_cfl_init.f90
+         src/rhyme_cfl_time_step.f90 src/rhyme_cfl.f90)
 
 set(rhyme_src_dir ..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
