--- a/src/rhyme_samr_bc/CMakeLists.txt
+++ b/src/rhyme_samr_bc/CMakeLists.txt
@@ -9,7 +9,7 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008")
 endif()
 
-set(deps rhyme_units rhyme_samr rhyme_logger)
+set(deps rhyme_units rhyme_thermo_base rhyme_samr rhyme_logger)
 
 set(internal_deps)
 
