--- a/src/rhyme_sanity_check/tests/CMakeLists.txt
+++ b/src/rhyme_sanity_check/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(rhyme_sanity_check_tests)
 set(test_subject rhyme_sanity_check)
 
-set(factories rhyme_units rhyme_samr rhyme_logger)
+set(factories rhyme_units rhyme_thermo_base rhyme_samr rhyme_logger)
 
 set(test_deps rhyme_units rhyme_samr rhyme_assertion)
 
