--- a/src/rhyme_stabilizer/tests/CMakeLists.txt
+++ b/src/rhyme_stabilizer/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(rhyme_stabilizer_tests)
 set(test_subject rhyme_stabilizer)
 
-set(factories rhyme_logger)
+set(factories rhyme_samr rhyme_logger)
 
 set(test_deps rhyme_assertion)
 
