wip: stabilizer -- loading stabilizer params

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(deps
     rhyme_chombo
     rhyme_initial_condition
     rhyme_uv_background
+    rhyme_stabilizer
     rhyme_spectrum)
 
 foreach(dep ${deps})
