--- a/parameters_3d.conf.example
+++ b/parameters_3d.conf.example
@@ -4,7 +4,7 @@ projection_axis = z
 colormap = viridis
 
 
-# Report
+# **Report**
 report_pseudocolor = rho
 report_pseudocolor = temp
 report_pseudocolor = ntr_frac_0
@@ -15,7 +15,7 @@ report_histogram = e_tot
 report_frequency = 100  # steps
 
 
-# Sanity Check
+# **Sanity Check**
 sanity_check = enable
 sanity_check_frequency = 10
 sanity_check_rho = enable 0d0 1d1 "kg / m^3"
@@ -131,6 +131,16 @@ perturb = harmonic cartesian x 0.05 32 0d0 0d0 0d0 0d0 1d0
 perturb = symmetric_decaying cartesian y 1d0 56 2 0d0 0d0 0d0 0d0 1d0
 perturb = symmetric_decaying cartesian y 1d0 72 8 0d0 0d0 0d0 0d0 1d0
 perturb = wgn box_muller 2345 rho 0d0 1d2 1d0 0d0 30
+
+
+# **Stabilizer**
+stabilizer = enable
+stabilizer_weight = rho
+stabilizer_weight_power = 2
+stabilizer_initialize_center = disable 64 64 64  # px
+stabilizer_tolerance = 16 # px
+stabilizer_min_time_interval = 10 # time steps
+stabilizer_start_at = -1 # time step
 
 
 # **Chombo Output**
