feat: chombo_output -- backup

--- a/src/rhyme_chombo/CMakeLists.txt
+++ b/src/rhyme_chombo/CMakeLists.txt
@@ -14,6 +14,7 @@ set(deps rhyme_units rhyme_samr rhyme_logger)
 set(internal_deps rhyme_hdf5_util)
 
 set(srcs
+    src/rhyme_chombo_output_clean_backups.f90
     src/rhyme_chombo_output_should_be_saved.f90
     src/rhyme_chombo_output_init.f90
     src/rhyme_chombo_output_new_rule.f90
