--- a/parameters_1d.conf.example
+++ b/parameters_1d.conf.example
@@ -135,5 +135,6 @@ stabilizer_start_at = -1 # time step
 chombo_prefix = './prefix'
 chombo_nickname = 'hydro-simulation'
 chombo_output_every = 100
+chombo_output_restart_backup_every = 17
 chombo_output_rule = log 1d-4 1d0 5
 chombo_output_rule = linear 1.5d0 10d0 20
