--- a/src/rhyme_hdf5_util/tests/CMakeLists.txt
+++ b/src/rhyme_hdf5_util/tests/CMakeLists.txt
@@ -5,5 +5,5 @@ set(factories)
 
 set(test_deps rhyme_assertion)
 
-set(rhyme_src_dir ../../../..)
+set(rhyme_src_dir ../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
