[wip] DeepRS -- reading an HDF5 model file in init function

--- a/src/rhyme_deep_rs/tests/CMakeLists.txt
+++ b/src/rhyme_deep_rs/tests/CMakeLists.txt
@@ -3,9 +3,11 @@ set(test_subject rhyme_deep_rs)
 
 set(factories rhyme_logger)
 
-set(test_deps rhyme_assertion)
+set(test_deps rhyme_hdf5_util rhyme_assertion)
 
 set(assertions)
+
+configure_file("./../models/v20210502.h5" "v20210502.h5" COPYONLY)
 
 set(rhyme_src_dir ../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
