--- a/src/rhyme_deep_rs/CMakeLists.txt
+++ b/src/rhyme_deep_rs/CMakeLists.txt
@@ -9,7 +9,7 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "-std=f2008")
 endif()
 
-set(deps rhyme_logger)
+set(deps rhyme_hdf5_util rhyme_logger)
 
 set(internal_deps)
 
