[wip] DeepRS -- initializing conversion factors to model units

--- a/src/rhyme_deep_rs/tests/CMakeLists.txt
+++ b/src/rhyme_deep_rs/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(rhyme_deep_rs_tests)
 set(test_subject rhyme_deep_rs)
 
-set(factories rhyme_logger)
+set(factories rhyme_units rhyme_logger)
 
 set(test_deps rhyme_hdf5_util rhyme_assertion)
 
