[wip] DeepRS -- Added exec function to calculate p* Update the model structure

--- a/src/rhyme_deep_rs/CMakeLists.txt
+++ b/src/rhyme_deep_rs/CMakeLists.txt
@@ -13,7 +13,8 @@ set(deps rhyme_hdf5_util rhyme_units rhyme_logger)
 
 set(internal_deps)
 
-set(srcs src/rhyme_deep_rs_init.f90 src/rhyme_deep_rs.f90)
+set(srcs src/rhyme_deep_rs_exec.f90 src/rhyme_deep_rs_init.f90
+         src/rhyme_deep_rs.f90)
 
 set(rhyme_src_dir ..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
