--- a/src/rhyme_riemann_problem/tests/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ set(test_subject rhyme_riemann_problem)
 set(factories)
 set(test_deps)
 
-set(rhyme_src_dir ../../../..)
+set(rhyme_src_dir ../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
 
 # Configs
