--- a/src/rhyme_irs/tests/CMakeLists.txt
+++ b/src/rhyme_irs/tests/CMakeLists.txt
@@ -1,8 +1,7 @@
 project(rhyme_irs_tests)
 set(test_subject rhyme_irs)
 
-configure_file("sod_shock_tube_t_0_2_analytical.txt"
-               "sod_shock_tube_t_0_2_analytical.txt" COPYONLY)
+configure_file("assets/p_stars.txt" "p_stars.txt" COPYONLY)
 
 set(factories rhyme_units rhyme_hydro_base rhyme_thermo_base rhyme_logger)
 
