--- a/src/rhyme_muscl_hancock/CMakeLists.txt
+++ b/src/rhyme_muscl_hancock/CMakeLists.txt
@@ -9,8 +9,8 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -std=f2008")
 endif()
 
-set(deps rhyme_units rhyme_thermo_base rhyme_irs rhyme_slope_limiter
-         rhyme_logger)
+set(deps rhyme_units rhyme_thermo_base rhyme_riemann_problem
+         rhyme_slope_limiter rhyme_logger)
 
 set(internal_deps rhyme_mh_workspace)
 
