[wip] DeepRS -- move ExactRS & DeepRS under Riemann solver module

--- a/src/rhyme_riemann_problem/src/rhyme_deep_rs/tests/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/src/rhyme_deep_rs/tests/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(rhyme_deep_rs_tests)
 set(test_subject rhyme_deep_rs)
 
+configure_file("assets/p_stars.txt" "p_stars.txt" COPYONLY)
+
 set(factories rhyme_units rhyme_logger)
 
 set(test_deps rhyme_hdf5_util rhyme_assertion)
@@ -9,7 +11,7 @@ set(assertions)
 
 configure_file("./../models/v20210616.h5" "v20210616.h5" COPYONLY)
 
-set(rhyme_src_dir ../..)
+set(rhyme_src_dir ../../../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
 
 # Configs
