--- a/src/rhyme_riemann_problem/src/rhyme_irs/tests/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/src/rhyme_irs/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(factories rhyme_units rhyme_hydro_base rhyme_thermo_base rhyme_logger)
 
 set(test_deps rhyme_assertion)
 
-set(rhyme_src_dir ../..)
+set(rhyme_src_dir ../../../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/test_helper.cmake)
 
 # Configs
