--- a/src/rhyme_riemann_problem/src/rhyme_deep_rs/CMakeLists.txt
+++ b/src/rhyme_riemann_problem/src/rhyme_deep_rs/CMakeLists.txt
@@ -16,7 +16,7 @@ set(internal_deps)
 set(srcs src/rhyme_deep_rs_exec.f90 src/rhyme_deep_rs_init.f90
          src/rhyme_deep_rs.f90)
 
-set(rhyme_src_dir ..)
+set(rhyme_src_dir ../../..)
 include(${CMAKE_CURRENT_SOURCE_DIR}/${rhyme_src_dir}/../cmake/helper.cmake)
 
 # Configs
