[wip] Iliev -- updated the parameter files and notebooks

--- a/tests/Iliev-5/Iliev-5-CaseB.conf
+++ b/tests/Iliev-5/Iliev-5-CaseB.conf
@@ -1,6 +1,7 @@
 # Logger
 unicode_plotting = enable
 projection_axis = z
+pseudocolor_layer = 64
 colormap = rainbow
 
 # Report
@@ -144,14 +145,11 @@ IncludeQSOComptHeat = .false.
 # Single source
 NSources = 1
 SourceCoords = 0.0078125 0.0078125 0.0078125
-SpectrumType = 1
-# SpectrumType = 2
-# BlackBodyTemp = 1d5
+SpectrumType = 2
+BlackBodyTemp = 1d5
 TotalIonRate = 48.69897000433602
-SpectrumSlope = 1.7  # -1.7
 OpAngle = 0.0
 NSpectralRegions = 3
-# LinearSpcBins = .true.
 NSpectralBins = 10 10 50
 MinMaxEnergy = 1 1.8 1.8 4 4 100
 
