--- a/tests/Iliev-6/Iliev-6-CaseB.conf
+++ b/tests/Iliev-6/Iliev-6-CaseB.conf
@@ -1,6 +1,7 @@
 # Logger
 unicode_plotting = enable
 projection_axis = z
+pseudocolor_layer = 1
 colormap = rainbow
 
 # Report
@@ -76,8 +77,8 @@ sanity_check_total_energy = enable 0.9 1.1
 stabilizer = disable
 
 # Chombo Output
-chombo_prefix = "./Iliev-6-CaseA-1000"
-chombo_nickname = 'Iliev-6-CaseA'
+chombo_prefix = "./Iliev-6-CaseB-1000"
+chombo_nickname = 'Iliev-6-CaseB'
 chombo_output_restart_backup_every = 10
 chombo_output_rule  = linear 0.0 75 76
 chombo_output_final_time = 75
@@ -87,7 +88,7 @@ NSpecies = 1
 
 # general
 ActualRun = .true.
-VersionID = iliev-6-CaseA
+VersionID = iliev-6-CaseB
 
 # initial evolution
 DoInitEvol = .false.
@@ -97,7 +98,7 @@ InitCollEq = .false.
 LightSpeedLimit = .false.
 
 # Recombination
-CaseA = .ture.
+CaseA = .false.
 ClumpingFactor = 1
 
 # UVB
@@ -134,16 +135,13 @@ IncludeQSOComptHeat = .false.
 # Single source
 NSources = 1
 SourceCoords = 0.0078125 0.0078125 0.0078125
-SpectrumType = 1
-# SpectrumType = 2
-# BlackBodyTemp = 1d5
+SpectrumType = 2
+BlackBodyTemp = 1d5
 TotalIonRate = 50d0
-SpectrumSlope = 1.7  # -1.7
 OpAngle = 0.0
 NSpectralRegions = 3
-# LinearSpcBins = .true.
-NSpectralBins = 10 10 100
-MinMaxEnergy = 1 1.8 1.8 4 4 1000
+NSpectralBins = 10 10 50
+MinMaxEnergy = 1 1.8 1.8 4 4 100
 
 # Ray tracing
 NRays = 5
