--- a/tests/Iliev-7/Iliev-7-CaseB.conf
+++ b/tests/Iliev-7/Iliev-7-CaseB.conf
@@ -1,6 +1,7 @@
 # Logger
 unicode_plotting = enable
 projection_axis = z
+pseudocolor_layer = 64
 colormap = rainbow
 
 # Report
@@ -44,7 +45,7 @@ tolerance = 1.d-8
 n_iteration = 10000
 
 # Slope Limiter
-slope_limiter = minmod
+slope_limiter = van_leer
 slope_limiter_omega = 0d0
 
 # Chemistry
@@ -59,7 +60,7 @@ collisional_ionization_equilibrium = enable
 photoionization_equilibrium = disable
 ie_convergence_rate = 0.001
 ie_max_niterations = 10000
-species_cases = case_a case_a case_a
+species_cases = case_b case_b case_b
 equilibrium_table_size = 1024 1024
 equilibrium_table_temp_range = 1d1 1d5 K
 equilibrium_table_density_range = 1d-4 1d-1 "m_H / cm^3"
@@ -86,8 +87,8 @@ sanity_check_total_energy = enable 0.9 1.1
 stabilizer = disable
 
 # Chombo Output
-chombo_prefix = "./output-bb-1000Ryd"
-chombo_nickname = 'iliev-7-bb-1000Ryd'
+chombo_prefix = "./Iliev-7-CaseB"
+chombo_nickname = 'Iliev-7-CaseB'
 chombo_output_restart_backup_every = 10
 chombo_output_rule  = linear 0.0 80.0 81
 chombo_output_final_time = 76
@@ -107,7 +108,7 @@ InitCollEq = .false.
 LightSpeedLimit = .false.
 
 # Recombination
-CaseA = .ture.
+CaseA = .false.
 ClumpingFactor = 1
 
 # UVB
@@ -147,12 +148,11 @@ SourceCoords = -10.0001, 0.5001, 0.5001
 SpectrumType = 2
 BlackBodyTemp = 1d5
 TotalIonRate = 53.78051831433521
-SpectrumSlope = 1.7  # -1.7
 OpAngle = 0.0
-NSpectralRegions = 1
+NSpectralRegions = 3
 LinearSpcBins = .true.
-NSpectralBins = 500
-MinMaxEnergy = 1 1000
+NSpectralBins = 10 10 50
+MinMaxEnergy = 1 1.8 1.8 4 4 100
 
 # Ray tracing
 NRays = 5
