--- a/tests/Iliev-7/Iliev-7-CaseA.conf
+++ b/tests/Iliev-7/Iliev-7-CaseA.conf
@@ -6,15 +6,16 @@ colormap = rainbow
 
 # Report
 report_pseudocolor = rho
-report_pseudocolor  = e_tot
-report_pseudocolor   = temp
-report_pseudocolor    = ntr_frac_0
+report_histogram = rho
+report_histogram = temp
+report_histogram = e_tot
+report_histogram = ntr_frac_0
 report_frequency = 10
 
 # Initial Condition
 ic_type = simple
 ic_grid = 128 128 128
-ic_box_lengths = 15 15 15 'kpc'
+ic_box_lengths = 6.6 6.6 6.6 'kpc'
 ic_redshift = 0.0
 
 # AMR
@@ -27,18 +28,15 @@ length_unit = "Mpc"
 time_unit = "Myr"
 
 # Boundary Conditions
-left_bc = reflective
+left_bc = outflow
 right_bc = outflow
-bottom_bc = reflective
+bottom_bc = outflow
 top_bc = outflow
-back_bc = reflective
+back_bc = outflow
 front_bc = outflow
 
 # Thermodynamics
 ideal_gas_type = monatomic
-
-# CFL
-courant_number = 0.2  # Better to choose a value less than 0.2
 
 # Exact Riemann Solver
 vacuum_pressure = 0d0  # cm^-3 Mpc^2 Myr^-2
@@ -72,13 +70,15 @@ solver_type = memory_intensive
 
 
 # Drawing
-canvas = uniform 1d-3 0d0 0d0 0d0 8.63360831e-16 100 1 0 0
+canvas = uniform 2d-4 0d0 0d0 0d0 1.389585607d-14 8000 0 0 0
+shape = sphere 5.d0 3.3 3.3 0.8 5d-2 'kpc'
+shape_filling = uniform absolute 4d-2 0d0 0d0 0d0 1.389585607d-14 40 1 1 0 2d-4 0d0 0d0 0d0 1.389585607d-14 8000 0 0 0
 
 # Sanity Check
 sanity_check = enable
 sanity_check_frequency = 1
-sanity_check_rho = enable 5d-4 5d-3 "m_H / cm^3"
-sanity_check_temp = enable 100 20000 "K"
+sanity_check_rho = enable 2d-4 4d-2 "m_H / cm^3"
+sanity_check_temp = enable 40 8000 "K"
 sanity_check_ntr_frac_0 = enable 0 1
 sanity_check_total_mass = enable 0.9 1.1
 sanity_check_total_energy = enable 0.9 1.1
@@ -87,18 +87,18 @@ sanity_check_total_energy = enable 0.9 1.1
 stabilizer = disable
 
 # Chombo Output
-chombo_prefix = "./Iliev-5-CaseA"
-chombo_nickname = 'Iliev-5-CaseA'
+chombo_prefix = "./Iliev-7-CaseA"
+chombo_nickname = 'Iliev-7-CaseA'
 chombo_output_restart_backup_every = 10
-chombo_output_rule  = linear 0.0 500 51
-chombo_output_final_time = 500
+chombo_output_rule  = linear 0.0 80.0 81
+chombo_output_final_time = 76
 
 # species
 NSpecies = 1
 
 # general
 ActualRun = .true.
-VersionID = iliev-5-CaseA
+VersionID = iliev-7
 
 # initial evolution
 DoInitEvol = .false.
@@ -120,9 +120,9 @@ KeepBKG = .false.
 Verbosity = 3
 
 # timestep
-TimeStepFact = 0.1
+TimeStepFact = 0.05
 InitialSimTime = 0.0
-SimulationTime = 500 # Myr
+SimulationTime = 80 # Myr
 
 # cosmology
 OmegaBaryonNow = 0.0486
@@ -132,8 +132,8 @@ HubbleConstNow = 67.74  # km / s / Mpc
 InitialRedshift = 0.0
 
 # ic
-InitHIIradius = 0.0078125  # box size, 1px
-SafetyDist = 0.0078125  # box size, 1px
+InitHIIradius = 11.2  # box size
+SafetyDist = 11  # box size
 
 # Heating & Cooling mechanisms
 IncludeCollIon = 1
@@ -144,12 +144,13 @@ IncludeQSOComptHeat = .false.
 
 # Single source
 NSources = 1
-SourceCoords = 0.0078125 0.0078125 0.0078125
+SourceCoords = -10.0001, 0.5001, 0.5001
 SpectrumType = 2
 BlackBodyTemp = 1d5
-TotalIonRate = 48.69897000433602
+TotalIonRate = 53.78051831433521
 OpAngle = 0.0
 NSpectralRegions = 3
+LinearSpcBins = .true.
 NSpectralBins = 10 10 50
 MinMaxEnergy = 1 1.8 1.8 4 4 100
 
