[refactor] Updated parameter files based on thesis values Refactored test notebooks

--- a/tests/Iliev-5/Iliev-5-CaseB.conf
+++ b/tests/Iliev-5/Iliev-5-CaseB.conf
@@ -38,7 +38,7 @@ front_bc = outflow
 ideal_gas_type = monatomic
 
 # CFL
-courant_number = 0.2  # Better to choose a value less than 0.2
+courant_number = 0.8
 
 # Exact Riemann Solver
 vacuum_pressure = 0d0  # cm^-3 Mpc^2 Myr^-2
@@ -56,16 +56,10 @@ element_abundances = 1.0 0.0
 
 # Ionisation Equilibrium
 uvb_equilibrium = disable
-uvb_model = HM12
 uvb_self_shielding = disable
-collisional_ionization_equilibrium = enable
+collisional_ionization_equilibrium = disable
 photoionization_equilibrium = disable
-ie_convergence_rate = 0.001
-ie_max_niterations = 10000
 species_cases = case_b case_b case_b
-equilibrium_table_size = 1024 1024
-equilibrium_table_temp_range = 1d1 1d5 K
-equilibrium_table_density_range = 1d-4 1d-1 "m_H / cm^3"
 
 # MUSCL-Hancock solver
 solver_type = memory_intensive
@@ -75,13 +69,7 @@ solver_type = memory_intensive
 canvas = uniform 1d-3 0d0 0d0 0d0 8.63360831e-16 100 1 0 0
 
 # Sanity Check
-sanity_check = enable
-sanity_check_frequency = 1
-sanity_check_rho = enable 5d-4 5d-3 "m_H / cm^3"
-sanity_check_temp = enable 100 20000 "K"
-sanity_check_ntr_frac_0 = enable 0 1
-sanity_check_total_mass = enable 0.9 1.1
-sanity_check_total_energy = enable 0.9 1.1
+sanity_check = disable
 
 # Stabilizer
 stabilizer = disable
@@ -145,7 +133,7 @@ IncludeQSOComptHeat = .false.
 # Single source
 NSources = 1
 SourceCoords = 0.0078125 0.0078125 0.0078125
-SpectrumType = 2
+SpectrumType = 2  # Blackbody
 BlackBodyTemp = 1d5
 TotalIonRate = 48.69897000433602
 OpAngle = 0.0
