--- a/tests/Iliev-6/Iliev-6-CaseB.conf
+++ b/tests/Iliev-6/Iliev-6-CaseB.conf
@@ -38,7 +38,7 @@ front_bc = outflow
 ideal_gas_type = monatomic
 
 # CFL
-courant_number = 0.2  # Better to choose a value less than 0.2
+courant_number = 0.8
 
 # Exact Riemann Solver
 vacuum_pressure = 0d0  # cm^-3 Mpc^2 Myr^-2
@@ -56,6 +56,10 @@ element_abundances = 1.0 0.0
 
 # Ionisation Equilibrium
 uvb_equilibrium = disable
+uvb_self_shielding = disable
+collisional_ionization_equilibrium = disable
+photoionization_equilibrium = disable
+species_cases = case_b case_b case_b
 
 # MUSCL-Hancock solver
 solver_type = memory_intensive
@@ -65,13 +69,7 @@ solver_type = memory_intensive
 canvas = density_power_law 0 0 0 14.687999999999999 14.687999999999999 -2.0 3.2 3.2 0d0 0d0 0d0 2.76275466e-12 100 1 0 0
 
 # Sanity Check
-sanity_check = enable
-sanity_check_frequency = 1
-sanity_check_rho = enable 0.8 4.8 "m_H / cm^3"
-sanity_check_temp = enable 100 20000 "K"
-sanity_check_ntr_frac_0 = enable 0 1
-sanity_check_total_mass = enable 0.9 1.1
-sanity_check_total_energy = enable 0.9 1.1
+sanity_check = disable
 
 # Stabilizer
 stabilizer = disable
@@ -135,7 +133,7 @@ IncludeQSOComptHeat = .false.
 # Single source
 NSources = 1
 SourceCoords = 0.0078125 0.0078125 0.0078125
-SpectrumType = 2
+SpectrumType = 2  # Blackbody
 BlackBodyTemp = 1d5
 TotalIonRate = 50d0
 OpAngle = 0.0
