--- a/tests/Iliev-7/Iliev-7-CaseA.conf
+++ b/tests/Iliev-7/Iliev-7-CaseA.conf
@@ -6,10 +6,9 @@ colormap = rainbow
 
 # Report
 report_pseudocolor = rho
-report_histogram = rho
-report_histogram = temp
-report_histogram = e_tot
-report_histogram = ntr_frac_0
+report_pseudocolor  = e_tot
+report_pseudocolor   = temp
+report_pseudocolor    = ntr_frac_0
 report_frequency = 10
 
 # Initial Condition
@@ -38,6 +37,9 @@ front_bc = outflow
 # Thermodynamics
 ideal_gas_type = monatomic
 
+# CFL
+courant_number = 0.8
+
 # Exact Riemann Solver
 vacuum_pressure = 0d0  # cm^-3 Mpc^2 Myr^-2
 vacuum_density = 0d0  # cm^-3
@@ -54,16 +56,10 @@ element_abundances = 1.0 0.0
 
 # Ionisation Equilibrium
 uvb_equilibrium = disable
-uvb_model = HM12
 uvb_self_shielding = disable
-collisional_ionization_equilibrium = enable
+collisional_ionization_equilibrium = disable
 photoionization_equilibrium = disable
-ie_convergence_rate = 0.001
-ie_max_niterations = 10000
-species_cases = case_a case_a case_a
-equilibrium_table_size = 1024 1024
-equilibrium_table_temp_range = 1d1 1d5 K
-equilibrium_table_density_range = 1d-4 1d-1 "m_H / cm^3"
+species_cases = case_b case_b case_b
 
 # MUSCL-Hancock solver
 solver_type = memory_intensive
@@ -75,13 +71,7 @@ shape = sphere 5.d0 3.3 3.3 0.8 5d-2 'kpc'
 shape_filling = uniform absolute 4d-2 0d0 0d0 0d0 1.389585607d-14 40 1 1 0 2d-4 0d0 0d0 0d0 1.389585607d-14 8000 0 0 0
 
 # Sanity Check
-sanity_check = enable
-sanity_check_frequency = 1
-sanity_check_rho = enable 2d-4 4d-2 "m_H / cm^3"
-sanity_check_temp = enable 40 8000 "K"
-sanity_check_ntr_frac_0 = enable 0 1
-sanity_check_total_mass = enable 0.9 1.1
-sanity_check_total_energy = enable 0.9 1.1
+sanity_check = disable
 
 # Stabilizer
 stabilizer = disable
@@ -145,7 +135,7 @@ IncludeQSOComptHeat = .false.
 # Single source
 NSources = 1
 SourceCoords = -10.0001, 0.5001, 0.5001
-SpectrumType = 2
+SpectrumType = 2  # Blackbody
 BlackBodyTemp = 1d5
 TotalIonRate = 53.78051831433521
 OpAngle = 0.0
